src/test/resources/entity_test/invalid/Employee4.entity
E#n_tité{id:integer;}
